--- a/ARDicee/Base.lproj/Main.storyboard
+++ b/ARDicee/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--ARDicee-->
         <scene sceneID="tXr-a1-R10">
             <objects>
                 <viewController id="BV1-FR-VrT" customClass="ViewController" customModule="ARDicee" customModuleProvider="target" sceneMemberID="viewController">
@@ -29,7 +29,12 @@
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" id="rJc-2c-zQA"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="XOy-EG-bfw">
+                    <navigationItem key="navigationItem" title="ARDicee" id="XOy-EG-bfw">
+                        <barButtonItem key="leftBarButtonItem" systemItem="trash" id="bsp-x6-9vT">
+                            <connections>
+                                <action selector="removeAllDice:" destination="BV1-FR-VrT" id="ZfH-VR-cu9"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="hAU-1L-CkC">
                             <connections>
                                 <action selector="rollAgain:" destination="BV1-FR-VrT" id="2mz-58-F4o"/>
